fix: fix unexpected footer behavior on tablet

--- a/shelter/pages/style.scss
+++ b/shelter/pages/style.scss
@@ -867,6 +867,11 @@ li span {
         align-items: center;
         justify-content: center;
     }
+    .footer-doge {
+        width: 500px;
+        display: flex;
+        justify-content: center;
+    }
     .questions {
         padding-right: 60px;
         padding-left: 10px;
